--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # Email Configuration (Resend)
 RESEND_API_KEY=your-resend-api-key
+EMAIL_FROM=noreply@yourdomain.com
+ADMIN_EMAIL=admin@yourdomain.com
 
 # Optional: Analytics
 NEXT_PUBLIC_PLAUSIBLE_DOMAIN=startuppackage.cz
