--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.49.3",
+    "resend": "^6.6.0",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "zod": "^3.22.4"
